--- a/port-files/Makefile
+++ b/port-files/Makefile
@@ -1,17 +1,16 @@
-# Created by: Ken Moore <ken@ixsystems.com>
 # $FreeBSD$
 
 PORTNAME=	lumina-themes
 PORTVERSION=	%%CHGVERSION%%
 CATEGORIES=	x11-themes
 
-MAINTAINER=	ken@ixsystems.com
+MAINTAINER=	jt@ixsystems.com
 COMMENT=	Lumina desktop wallpapers/colors
 
-LICENSE=	BSD2CLAUSE
+LICENSE=	BSD2CLAUSE CC0-1.0
 
-USE_QT5=	qmake_build
 USES=	qmake
+USE_QT5=	qmake_build
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	trueos
